--- a/index.html
+++ b/index.html
@@ -5,27 +5,17 @@
 	<title>测试页面</title>
 
 	<style type="text/css">
-		ul li {
-			list-style: none;
-			float: left;
-			border: 1px solid red;
-			width:30px;
-			height: 30px;
-			margin-right: 5px;
-			text-align: center;
-			line-height: 30px;
+		.button{
+			width: 100px;
+			height: 60px;
+			background-color: aquamarine;
 		}
 	</style>
 </head>
 <body>
-	<ul>
-		<li>1</li>
-		<li>2</li>
-		<li>3</li>
-		<li>4</li>
-		<li>5</li>
-	</ul>
-	<div id="title">ddd</div>
-	<div id="card">aaaa</div>
+	<div id="root">
+		<div class="button">add</div>
+	</div>
+	<script src="./codeSegment/tasks/addLiElement.js"></script>
 </body>
 </html>
